Archive2/fc/fee07d34fe0490/output
main.cpp: In function 'int main()':
main.cpp:45:5: error: no matching function for call to 'Something::run(main()::<lambda()>, main()::<lambda()>, main()::<lambda()>)'
     );
     ^
main.cpp:45:5: note: candidate is:
main.cpp:20:9: note: int Something::run()
     int run() {
         ^
main.cpp:20:9: note:   candidate expects 0 arguments, 3 provided
